feat: Various result improvements